
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-28
2022-03-22 Mikhail Dubrovin
   src/CalibPars.py - code cleaning
   src/GeometryAccess.py - add method info_list_of_geos
   src/GeometryObject.py - add metho info_geo
   src/GlobalUtils.py - Add list_of_det_names_lower, dic_det_name_to_type,
	dic_det_tname_lower_to_calib_group, log_rec_at_start

Tag: V02-00-27
2022-02-24 Mikhail Dubrovin
- GlobalUtils.py - replace len(a.shape) with a.ndim
- CalibParsBaseCSPad2x2V1.py - code cleaning
- CalibParsBaseEpix100aV1.py - code cleaning
- CalibParsBaseEpix10kaV1.py - code cleaning
- Use universal parameters in
	pixel_mask_array(sp, mbits=0o377, width=1, wcentral=1, **kwa)
  - SegGeometryCspad2x1V1.py
  - SegGeometryEpix100V1.py
  - SegGeometryEpix10kaV1.py
  - SegGeometryEpix10kaV2.py
  - SegGeometryJungfrauV1.py
  - SegGeometryJungfrauV2.py

Tag: V02-00-26
2022-01-25 Mikhail Dubrovin
- src/GlobalUtils.py - change default chmod parameters, add os.umask(0o0)

Tag: V02-00-25
2022-01-05 Mikhail Dubrovin
- src/UtilsPSF.py - fix py3 issue - use int for devision in other place

Tag: V02-00-24
2022-01-06 Mikhail Dubrovin
	modified:   examples/testUtilsPSF.py - add tests *6 for rayonix_1920
	modified:   src/GeometryAccess.py - add *psf methods, update docsring
	modified:   src/UtilsPSF.py - improve docsring, rename parameters for readability

Tag: V02-00-23
2022-01-03 Mikhail Dubrovin
- src/UtilsPSF.py - fix py3 issue - use int for devision

Tag: V02-00-22
2021-12-16 Mikhail Dubrovin
- geometry_convert - get rid of parameter --dettype in psana to CrystFEL converter
	modified:   ../app/geometry_convert
	modified:   ../doc/ChangeLog

Tag: V02-00-21
2021-12-15 Mikhail Dubrovin
- 1-st working version of UtilsPSF with separated testUtilsPSF.py