@@ -63,9 +63,14 @@ from PSCalib.CalibPars import CalibPars
 from PSCalib.CalibFileFinder import CalibFileFinder
 
 import PSCalib.GlobalUtils as gu
-from PSCalib.NDArrIO import load_txt # , save_txt, list_of_comments
+from PSCalib.NDArrIO import load_txt # save_txt, list_of_comments
 
 from pyimgalgos.GlobalUtils import print_ndarr
+
+GAIN_FACTOR_DEFAULT = 0.06 # keV/ADU on 2022/0/03 epix100 gain factor(Philip) = 60 eV/ADU, gain(Conny) = 16.4 ADU/keV
+GAIN_DEFAULT = 1./GAIN_FACTOR_DEFAULT # ADU/keV
+TIME_SEC_NEW_GAIN = 1650524400 # sec for 2022-04-21 00:00
+#TIME_SEC_NEW_GAIN = 1649908620 # test minimal event time for mecly4720 epix100a run=834
 
 class GenericCalibPars(CalibPars) :
 
@@ -180,7 +185,13 @@ class GenericCalibPars(CalibPars) :
         if ctype in (gu.PEDESTALS, gu.PIXEL_STATUS, gu.PIXEL_BKGD, gu.PIXEL_DATAST, gu.PIXEL_OFFSET):
             return np.zeros(self.cbase.shape, dtype = gu.dic_calib_type_to_dtype[ctype])
 
-        else: # for PIXEL_RMS, PIXEL_GAIN, PIXEL_MASK, etc
+        elif ctype == gu.PIXEL_GAIN and self.group == 'Epix100a::CalibV1':
+            if self.pbits: print('INFO %s: set DEFAULT PIXEL_GAIN constants for %s GAIN_FACTOR_DEFAULT %f evt time(s) %.2f'%\
+                                 (self.msgh(3), self.group, GAIN_FACTOR_DEFAULT, self.tsec))
+            ones = np.ones(self.cbase.shape, dtype = gu.dic_calib_type_to_dtype[ctype])
+            return GAIN_FACTOR_DEFAULT * ones if self.tsec is not None and int(self.tsec) > TIME_SEC_NEW_GAIN else ones
+
+        else: # for PIXEL_RMS, PIXEL_MASK, etc
             return np.ones(self.cbase.shape, dtype = gu.dic_calib_type_to_dtype[ctype])
 
 
